@@ -248,7 +248,7 @@ void MainWindow::onClose (finalcut::FCloseEvent* ev)
 //----------------------------------------------------------------------
 void MainWindow::onShow (finalcut::FShowEvent*)
 {
-  addTimer(100);  // Call onTimer() every 100 ms
+  addTimer(90);  // Call onTimer() every 90 ms
 }
 
 //----------------------------------------------------------------------
